--- a/Lesson02-HTML-CSS/homework/homework.html
+++ b/Lesson02-HTML-CSS/homework/homework.html
@@ -38,7 +38,7 @@
         </li>
       </ul>
       <img src="http://http://lorempixel.com/400/200/food/"
-    </div>
+      <div>
     
     
   </body>
